--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,3 +1,25 @@
+.btn-new-task {
+    width: 108px;
+    height: 40px;
+    margin: 23px 200px 19px 2px;
+    padding: auto;
+    border-radius: 15px;
+    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.25);
+    background-color: rgba(68, 94, 99, 0.6);
+  }
 
 
+  .new-task {
+    width: 336px;
+    height: 72px;
+    margin: 19px 6px 24px 8px;
+    padding: 8px 8px 7px 15px;
+    border-radius: 15px;
+    box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.25);
+    background-color: rgba(68, 94, 99, 0.6);
+  }
 
+  .input-new-task {
+    background: transparent;
+    border: none;
+  }
