--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -11,28 +11,95 @@ body{
   background-image: linear-gradient(8deg, rgba(62, 51, 116, 0.57) -154%, rgba(155, 144, 215, 0.62) 245%);
 }
 
+
 .btn-new-task {
-    width: 108px;
-    height: 40px;
-    margin: 23px 200px 19px 2px;
-    padding: auto;
-    border-radius: 15px;
-    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.25);
-    background-color: rgba(68, 94, 99, 0.6);
+  width: 108px;
+  height: 40px;
+  margin: 10px auto 10px 20px;
+  padding: auto;
+  border: 0px;
+  border-radius: 15px;
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.25);
+  background-color: rgba(68, 94, 99, 0.6);
   }
 
-
-  .new-task {
-    width: 336px;
-    height: 72px;
-    margin: 19px 6px 24px 8px;
-    padding: 8px 8px 7px 15px;
-    border-radius: 15px;
-    box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.25);
-    background-color: rgba(68, 94, 99, 0.6);
+.btn-new-task:hover {
+  background-color: rgba(48, 65, 69, 0.6);
   }
 
-  .input-new-task {
-    background: transparent;
-    border: none;
+.btn-new-task:active {
+  background-color: rgba(89, 115, 119, 0.6);
   }
+
+.new-task {
+  display: none;
+  width: 90%;
+  min-width: 280px;
+  margin: auto;
+  border-radius: 15px;
+  box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.25);
+  background-color: rgba(68, 94, 99, 0.6);
+}
+
+.input-new-task {
+  background: transparent;
+  border: none;
+  margin: 10px 0 0 10px
+}
+
+.line {
+  width: 90%;
+  height: 1px;
+  margin: 5px auto 4px 5px;
+  background-color: rgba(255, 255, 255, 0.06);
+}
+
+.input-details {
+  display: none;
+}
+
+.details-container {
+  display: flex;
+  margin: 0 0 10px 10px;
+}
+
+.btn-details {
+  width: 40px;
+  min-height: 25px;
+  margin: 10px 5px 10px 5px;
+  padding: 2px;
+  border-radius: 5px;
+  backdrop-filter: blur(1px);
+  border: solid 1px #525252;
+  background-color: rgba(220, 220, 220, 0.38);
+}
+
+.btn-details span {
+  display: none;
+}
+
+.btn-details img {
+  height: 16px;
+}
+
+#btn-validate {
+width: 45px;
+min-height: 25px;
+margin: 10px 3px 10px 3px;
+border-radius: 5px;
+border: solid 1px rgba(145, 255, 93, 0.27);
+background-color: #445e63;
+}
+
+#btn-cancel {
+  width: 45px;
+  min-height: 25px;
+  margin: 10px 3px 10px 3px;
+  border-radius: 5px;
+  border: solid 1px rgba(255, 54, 54, 0.42);
+  background-color: rgba(167, 0, 0, 0.57);
+}
+
+.btn-validate-cancel {
+  margin: auto 10px auto auto;
+}
