--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -151,6 +151,7 @@ nav {
   border-radius: 15px;
   border: solid 1px rgba(222, 243, 255, 0.2);
   background-color: rgba(222, 243, 255, 0.1);
+  
 }
 
 .progress-bar {
@@ -165,10 +166,11 @@ nav {
 }
 
 .progress {
-  width: 66%;
+  width: 0%;
   height: 11px;
   border-radius: 30px;
   background-color: rgba(104, 149, 104, 0.8);
+  transition: 1.5s ease-in-out
 }
 
 .daylies ul {
@@ -185,10 +187,12 @@ nav {
   font-family: "Inter";
 }
 
-.daylies .active {
+.daylies .completed {
   color: rgba(220, 220, 220, 0.29);
   text-decoration-line: line-through;
 }
+
+
 
 .daylies h1 {
   letter-spacing: 7px;
@@ -205,6 +209,7 @@ nav {
   text-align: center;
   color: white;
   margin: 0;
+  margin-top: 7px;
 }
 
 /* LANDRY */
