finished new task creator

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -349,6 +349,7 @@ nav {
 
 .input-details {
   max-height: 25px;
+  max-width: 100px;
   margin: 10px 5px 10px 5px;
   padding: 2px;
   border-radius: 5px;
