--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .bd-background {
-    position: relative;
+  position: relative;
   width: 98%;
   height: 98vh;
   margin: auto;
@@ -116,8 +116,7 @@ body {
 .online {
   position: absolute;
   right: 0;
-  margin-top: 18px;
-  margin-right: 15px;
+  margin-top: -20px;
 }
 
 nav {
@@ -136,6 +135,10 @@ nav {
   margin: 10px;
 }
 
+.nav-right {
+  z-index: 1;
+}
+
 .nav-right img {
   margin-right: 15px;
   padding: 10px;
@@ -151,12 +154,10 @@ nav {
   border-radius: 15px;
   border: solid 1px rgba(222, 243, 255, 0.2);
   background-color: rgba(222, 243, 255, 0.1);
-  
 }
 
 .progress-bar {
   height: 11px;
-
   border-radius: 30px;
   -webkit-backdrop-filter: blur(1px);
   backdrop-filter: blur(1px);
@@ -170,7 +171,7 @@ nav {
   height: 11px;
   border-radius: 30px;
   background-color: rgba(104, 149, 104, 0.8);
-  transition: 1.5s ease-in-out
+  transition: 1.5s ease-in-out;
 }
 
 .daylies ul {
@@ -192,7 +193,46 @@ nav {
   text-decoration-line: line-through;
 }
 
+.login span {
+  margin-top: 5px;
+  width: 57px;
+  height: 28px;
+  margin: 12px 23px 8px 5px;
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 600;
+  color: #fff;
+}
 
+.login {
+  position: absolute;
+  right: 3px;
+  top: 5px;
+  display: none;
+  flex-direction: column;
+  text-align: center;
+  width: 140px;
+  height: 143px;
+  padding: 9px 10px 7px 24px;
+  border-radius: 15px;
+  border: solid 1px rgba(222, 243, 255, 0.2);
+  background-color: rgba(78, 91, 101, 0.59);
+}
+
+.login.active {
+  display: flex;
+}
+
+.logset {
+  margin: 20px;
+}
+
+.Line-5 {
+  width: 130px;
+  border: solid 1px;
+  margin: 8px 10px 15px 0;
+  color: white;
+}
 
 .daylies h1 {
   letter-spacing: 7px;
@@ -214,24 +254,24 @@ nav {
 
 /* LANDRY */
 
-#input-new-task::placeholder{
-    color: white;
+#input-new-task::placeholder {
+  color: white;
 }
 
-.plus-icon{
-    -webkit-text-stroke: 1px white;
-    font-size: 13px;
-    margin-right: 10px;
+.plus-icon {
+  -webkit-text-stroke: 1px white;
+  font-size: 13px;
+  margin-right: 10px;
 }
 
-.container-new-task{
-    width: 90%;
-    margin: auto;
-    font-family: "Andika", sans-serif;
+.container-new-task {
+  width: 90%;
+  margin: auto;
+  font-family: "Andika", sans-serif;
 }
 
 .btn-new-task {
-    font-size: 13px;
+  font-size: 13px;
   color: white;
   margin: 20px 0 15px 0;
   padding: 13px;
@@ -258,7 +298,7 @@ nav {
 }
 
 .input-new-task {
-    color: white;
+  color: white;
   background: transparent;
   border: none;
   margin: 15px 0 0 15px;
@@ -301,7 +341,7 @@ nav {
 }
 
 #btn-validate {
-    color: white;
+  color: white;
   width: 45px;
   min-height: 25px;
   margin: 10px 3px 10px 3px;
@@ -311,7 +351,7 @@ nav {
 }
 
 #btn-cancel {
-    color: white;
+  color: white;
   width: 45px;
   min-height: 25px;
   margin: 10px 3px 10px 3px;
