--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -533,13 +533,23 @@ margin: auto 10px auto auto;
 }
 
 .input-details {
-max-height: 25px;
-max-width: 100px;
+height: 20px;
+width: 75px;
 margin: 10px 5px 10px 5px;
 padding: 2px;
+color:black;
 border-radius: 5px;
 -webkit-backdrop-filter: blur(1px);
         backdrop-filter: blur(1px);
 border: solid 1px #525252;
 background-color: rgba(220, 220, 220, 0.38);
+}
+
+#priority {
+  height: 26px;
+  width: 81px;
+}
+
+#deadline::placeholder {
+  color: black;
 }
