--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,9 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Jua&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Inter:wght@100..900&family=Jua&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Georama:ital,wght@0,100..900;1,100..900&display=swap');
+
 
 .flex {
   display: flex;
+}
+
+*::-webkit-scrollbar{
+  display: none;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 body {
@@ -29,11 +37,7 @@ body {
   margin: auto;
   border-radius: 10px;
   box-shadow: 0 2px 4px 1px rgba(0, 0, 0, 0.25);
-  background-image: linear-gradient(
-    89deg,
-    rgba(62, 51, 116, 0.57) -154%,
-    rgba(155, 144, 215, 0.62) 245%
-  );
+  background-image: linear-gradient(89deg, rgb(35 32 49 / 57%) -154%, rgb(92 82 145 / 62%) 245%);
   padding-bottom: 8px;
 }
 
@@ -202,7 +206,7 @@ input[type="checkbox"] {
   font-family: "Andika", sans-serif;
   font-size: 11px;
   padding: 0;
-  margin-right: 46px;
+  margin-right: 61px;
   z-index: 100;
 }
 
@@ -302,7 +306,11 @@ nav {
   height: 11px;
   border-radius: 30px;
   background-color: rgba(104, 149, 104, 0.8);
-  transition: 1.5s ease-in-out
+  transition: 1s ease-in;
+  -webkit-transition: 1s ease-in;
+  -moz-transition: 1s ease-in;
+  -ms-transition: 1s ease-in;
+  -o-transition: 1s ease-in;
 }
 
 .daylies ul {
@@ -365,6 +373,7 @@ nav {
 
 #input-new-task::placeholder{
   color: white;
+  font-family: "Andika", sans-serif;;
 }
 
 #input-new-task:focus::-webkit-input-placeholder{
@@ -475,6 +484,7 @@ display: none;
 
 .btn-details img {
 height: 16px;
+margin-bottom: -3px;
 }
 
 #btn-validate {
@@ -486,6 +496,7 @@ border-radius: 5px;
 border: solid 1px rgba(145, 255, 93, 0.27);
 background-color: #445e63;
 pointer-events: auto;
+font-size: 18px;
 }
 
 #btn-validate:hover {
@@ -512,6 +523,14 @@ border: solid 1px rgba(255, 54, 54, 0.42);
 background-color: rgba(167, 0, 0, 0.57);
 }
 
+#btn-cancel span:nth-child(2){
+  display: none;
+}
+
+#btn-validate span:nth-child(2){
+  display: none;
+}
+
 #btn-cancel:active {
   background-color: rgba(89, 0, 0, 0.57);
 }
@@ -526,8 +545,7 @@ margin: auto 10px auto auto;
 }
 
 .input-details {
-max-height: 25px;
-max-width: 100px;
+max-width: 69px;
 margin: 10px 5px 10px 5px;
 padding: 2px;
 border-radius: 5px;
@@ -535,4 +553,259 @@ border-radius: 5px;
         backdrop-filter: blur(1px);
 border: solid 1px #525252;
 background-color: rgba(220, 220, 220, 0.38);
+flex-wrap: nowrap;
+}
+
+input[type="date"]{
+  padding: 1px 6px;
+  max-width: 18px;
+}
+
+select{
+  height: 22px;
+}
+
+
+
+/* ////////////////////////////////////////////////////////// */
+
+
+
+@media (width > 1024px) {
+ 
+  .nav-left{
+    margin-top: 10px;
+    margin-left: 20px;
+  }
+
+  .nav-left img:first-of-type{
+    width: 45px;
+  }
+
+  .nav-left img:nth-child(2){
+    width: 80px;
+  }
+
+  .nav-right{
+    display: flex;
+  }
+
+  .nav-desktop-date{
+    display: inline;
+    margin-top: 17px;
+    margin-right: 20px;
+    font-family: "Georama", sans-serif;
+    font-weight: 200;
+    font-size: 14px;
+    color: #e7e7e7;
+  }
+
+  .nav-right img{
+    width: 50px;
+    margin-right: 20px;
+  }
+
+  .online{
+    margin-right: 20px;
+    margin-top: 35px;
+  }
+
+  .online img{
+    width: 15px;
+  }
+
+
+
+  main{
+    display: flex;
+    margin-top: 40px;
+    width: 90%;
+    height: 90%;
+  }
+
+  .desktop-left{
+    margin: auto;
+    flex: 2;
+    height: 100%;
+  }
+
+  .desktop-right{
+    flex: 5;
+    height: 100%;
+  }
+
+  .daylies h1{
+    font-size: 35px;
+    font-weight: normal;
+    margin-top: 12px;
+    margin-bottom: 10px;
+    letter-spacing: 4px;
+  }
+
+  .daylies{
+    width: 70%;
+    height: 94%;
+    border-radius: 25px;
+    box-shadow: 1px 2px 20px 2px rgba(0, 0, 0, 0.19), 1px 1px 1px 0 rgba(255, 255, 255, 0), 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    background-color: rgba(73, 68, 99, 0.78);
+    border: none;
+  }
+
+  .progress-bar{
+    width: 85%;
+    margin: auto;
+    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.19);
+  }
+
+  .daylies-task{
+    width: 85%;
+    margin: 30px auto auto auto;
+    font-size: 18px;
+    font-weight: 500;
+  }
+
+  .daylies ul li{
+    margin-bottom: 15px;
+    }
+
+  .toggle{
+    display: none;
+  }
+
+  .container-new-task{
+    margin: 0 auto 18px auto;
+    width: 95%;
+  }
+
+  .new-task{
+    margin: 0;
+    width: 95%;
+    box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.25);
+    background-color: rgba(68, 94, 99, 0.6);
+  }
+
+  .btn-new-task{
+    font-family: "Andika", sans-serif;
+  }
+
+  .input-new-task::placeholder{
+    color: #e7e7e7;
+    font-family: "Andika", sans-serif;
+  }
+
+  .line{
+    width: 95%;
+  }
+
+  .btn-details {
+    width: 100px;
+    flex-direction: row-reverse;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.25);
+  }
+
+  #input-new-task{
+    margin-left: 17px;
+  }
+
+  #btn-validate{
+    font-size: 13px;
+    width: 70px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.25);
+  }
+
+  #btn-cancel span:first-child{
+    display: none;
+  }
+
+  #btn-validate span:first-child{
+    display: none;
+  }
+
+  #btn-cancel span:nth-child(2){
+    display: inline;
+  }
+  
+  #btn-validate span:nth-child(2){
+    display: inline;
+  }
+
+  #btn-cancel{
+    font-size: 13px;
+    width: 70px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.25);
+  }
+
+  .btn-details span{
+    display: inline;
+    font-family: "Andika", sans-serif;
+    color: #e7e7e7;
+    margin-right: 5px;
+  }
+
+  .btn-new-task{
+    margin: 0;
+    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.25);
+  }
+
+  .task-list{
+    width: 95%;
+    height: 87%;
+    margin: auto;
+    overflow: scroll;
+  }
+  
+  .list{
+    width: 95%;
+    margin: 0 0 20px 0;
+  }
+
+  .task{
+    width: 70%;
+    margin-left: 16px;
+    padding: 3px;
+    justify-content: left;
+    font-size: 14px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  }
+
+  input[type="checkbox"]{
+    flex: 0;
+    margin-right: 10px;
+    margin-left: 10px;
+  }
+
+  .task-name{
+    font-size: 14px;
+  }
+
+  .task-date{
+    font-size: 13px;
+  }
+  
+  .edit-task{
+    font-size: 17px;
+  }
+
+  .list-title{
+    font-size: 17px;
+  }
+
+  .edit-list{
+    font-size: 17px;
+  }
+
+  .bd-background{
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.25);
+    background-image: linear-gradient(to bottom, rgba(60, 67, 92, 0.522) 38%, #2f3a5f 82%);
+    border: 1px solid rgb(80, 80, 80);
+    border-radius: 25px;
+    margin-top: 4px;
+    margin-bottom: 7px;
+    width: 99%;
+    height: 98vh;
+  }
+
+  body{
+    background-color: #52606e;
+  }
 }
